--- a/css/contact.css
+++ b/css/contact.css
@@ -62,6 +62,7 @@
   font-size: 1.5rem;
   margin-left: 20px;
   text-align: center;
+  margin-top: 50px;
 }
 
 .contact_email,
